type text no html retirado

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </form>
     </main>
 
-    <script type="text/javascript" src="src/js/form.js"></script>
+    <script src="/src/js/form.js"></script>
 </body>
 
 </html>
